	- fix volume column volume slide effect memory
	- fix IT default filter cutoff on new note
	- fix IT filter envelope memory
	Fix crashes with fuzzed files (reported by Lionel Debroux):
	- add sanity check to MED2/3/4 loader
	- add sanity check to STIM/GDM/DBM/LIQ/ICE/PSM/PTM loader
	- add sanity check to MDL/RAD/MGT/IMF/RTM/DT pattern loader
	- add sanity check to OKT sample chunk loader
	- add sanity check to Archimedes Tracker format test
	- add sanity check to Digital Symphony track loader
	- add sanity check to SQSH depacker
	- add sanity check to arc depacker
	- add sanity check for AMD number of patterns
	- add sanity check for STX number of patterns
	- add sanity check for MMD1/3 number of channels
	- add sanity check for MMD1/3 instrument type
	- add sanity check for IT old instrument loading
	- add sanity checks and fix memory leaks in the Vorbis decoder
	Other changes:
	- fix instrument number in channel initialization
	- fix sample size limit (reported by Jochen Goernitz)
	- fix loading of OpenMPT 1.17 IT modules (reported by Dane Bush)
	- fix sample number limit (reported by Lionel Debroux)
	- fix Oktalyzer split channel replay (reported by Dennis Lindroos)
	- fix Oktalyzer sample loop (by Dennis Lindroos)
	- fix Oktalyzer note slide up/down effect
	- fix ThePlayer pattern decoding
	- fix XM loading for MED2XM modules (reported by Lorence Lombardo)
	- add support to Amiga split channel loop and volume setting
	- add IT random volume variation
	- add IT random pan variation

4.3.5 (20150207):
	Fix crashes with fuzzed files (reported by Lionel Debroux):
	- add sanity check for ST3 S3M maximum sample size
	- add sanity check for sample loop start
	- add sanity check for speed 0
	- add sanity check for invalid XM effects
	- add sanity check for maximum number of channels
	- add sanity check for number of points in IT envelope
	- add sanity check for S3M file format information
	- add sanity check for maximum sample size